--- a/literature/literature.html
+++ b/literature/literature.html
@@ -68,8 +68,11 @@ img {
 <li><a href="#one-by-one">One by one</a><ul>
 <li><a href="#saha-and-chaki-2013">Saha and Chaki (2013)</a></li>
 <li><a href="#wang-qicheng-shasha-et-al.-2000">Wang, Qicheng, Shasha, et al. (2000)</a></li>
-<li><a href="#xie-li-jiang-and-zhao-2015">Xie, Li, Jiang, and Zhao (2015)</a></li>
+<li><a href="#xie-li-jiang-et-al.-2015">Xie, Li, Jiang, et al. (2015)</a></li>
 <li><a href="#behnam-waterman-and-smith-2013">Behnam, Waterman, and Smith (2013)</a></li>
+<li><a href="#behnam-waterman-and-smith-2013-1">Behnam, Waterman, and Smith (2013)</a></li>
+<li><a href="#yang-zhang-and-zhu-2013">Yang, Zhang, and Zhu (2013)</a></li>
+<li><a href="#bonham-carter-steele-and-bastola-2014">Bonham-Carter, Steele, and Bastola (2014)</a></li>
 </ul></li>
 <li><a href="#references">References</a></li>
 </ul>
@@ -79,7 +82,7 @@ img {
 <h1>One by one</h1>
 <div id="saha-and-chaki-2013" class="section level2">
 <h2>Saha and Chaki (2013)</h2>
-<p>They mention few investigations, most of them uses n-grams. The Wang, Qicheng, Shasha, and Wu (2000) was the most appealing.</p>
+<p>They mention few investigations, most of them uses n-grams. The Wang, Qicheng, Shasha, et al. (2000) was the most appealing.</p>
 </div>
 <div id="wang-qicheng-shasha-et-al.-2000" class="section level2">
 <h2>Wang, Qicheng, Shasha, et al. (2000)</h2>
@@ -87,14 +90,27 @@ img {
 <p>Cool idea: ‘To compensate for the possible loss of information due to ignoring the other 2-gram patterns, a linear correlation coefficient (LCC) between the values of the 436 2-gram patterns with respect to the protein sequence S and the mean value of the 436 2-gram patterns in the positive training dataset is calculated and used as another input feature value for S.’</p>
 <p>They have quite expanded motif usage for the bayesian neural network.</p>
 </div>
-<div id="xie-li-jiang-and-zhao-2015" class="section level2">
-<h2>Xie, Li, Jiang, and Zhao (2015)</h2>
+<div id="xie-li-jiang-et-al.-2015" class="section level2">
+<h2>Xie, Li, Jiang, et al. (2015)</h2>
 <p>Consecutive n-grams + random forests. Good n-gram reference: Manning and Schuetze, 1999. Benchmark with other methods.</p>
 </div>
 <div id="behnam-waterman-and-smith-2013" class="section level2">
 <h2>Behnam, Waterman, and Smith (2013)</h2>
 <p>HGT as the example of phenomenon missed by alignment-based phylogenetics.</p>
 <p>Critique of <span class="math">\(D^2\)</span> statistic and introduction of its variant. Introduction of bichromatic closest pair. Article focused on the speed.</p>
+</div>
+<div id="behnam-waterman-and-smith-2013-1" class="section level2">
+<h2>Behnam, Waterman, and Smith (2013)</h2>
+<p>HGT as the example of phenomenon missed by alignment-based phylogenetics.</p>
+<p>Critique of <span class="math">\(D^2\)</span> statistic and introduction of its variant. Introduction of bichromatic closest pair. Article focused on the speed.</p>
+</div>
+<div id="yang-zhang-and-zhu-2013" class="section level2">
+<h2>Yang, Zhang, and Zhu (2013)</h2>
+<p>Don’t understand. K0mer based, may be used for phylogenetics. Does not require specyfying <span class="math">\(k\)</span>.</p>
+</div>
+<div id="bonham-carter-steele-and-bastola-2014" class="section level2">
+<h2>Bonham-Carter, Steele, and Bastola (2014)</h2>
+<p>Good review. Description of: factor frequencies, BBC (mutual information of DNA 2-grams), FFP (number of words commong among two sequences), Jensen-Shannon Divergence test (a test using Kullback-Leibler Divergence), suffix trees by k-mer frequencies (Euclidean distance between frequency counts, get optimum <span class="math">\(k\)</span> called <span class="math">\(l\)</span>), improved complete composition vector (distance between normalized frequency of positioned k-mers with different <span class="math">\(k\)</span>),</p>
 </div>
 </div>
 <div id="references" class="section level1">
